sandc/test/fixtures/astRegression/shouldFail/productions/switchPseudex/MissingElse.sand
pub class MissingElse {
    foo() {
        let a = switch val {
            case c {
                d
            }
        };
    }
}